- Corregidos errores en tiempo de ejecucion provenientes de la UI. - Agregada toda la DATA STRUCTURE del apartado de USUARIOS y su correspondiente mapeo de lectura y escritura en JSON para poder trabajar los datos desde el archivo usuarios.json. - Agregada estructura de GestionUsuario y correspondiente mapeo de json en constructor para trabajarlo desde su primera instancia. - Falta implementacion de metodos en las clases de usuarios para su implementacion en UI.